[vim] many small changes
ADD: Compi: mapping for make parallel + exec
CHG: Compi: redraw screen on execution
FIX: Mail ftdetec autocmd use bufenter
CHG: Templates: use standard distclean target instead of mrproper

--- a/vim/bundle/vim-templates/Makefiles/Makefile_c
+++ b/vim/bundle/vim-templates/Makefiles/Makefile_c
@@ -21,7 +21,7 @@ $(EXEC) : $(OBJ)
 %.o: %.c
 	$(CC) -o $@ -c $< $(CFLAGS)
 
-.PHONY : clean mrproper run
+.PHONY : clean distclean run
 
 run:
 	./$(EXEC)
@@ -29,5 +29,5 @@ run:
 clean :
 	rm -rf *.o
 
-mrproper : clean
+distclean : clean
 	rm -rf $(EXEC)
