--- a/vim/bundle/vim-templates/Makefiles/Makefile_cpp
+++ b/vim/bundle/vim-templates/Makefiles/Makefile_cpp
@@ -20,7 +20,7 @@ $(EXEC) : $(OBJ)
 %.o: %.cpp
 	$(CC) -o $@ -c $< $(CFLAGS)
 
-.PHONY : clean mrproper run
+.PHONY : clean distclean run
 
 run:
 	./$(EXEC)
@@ -28,5 +28,5 @@ run:
 clean :
 	rm -rf *.o
 
-mrproper : clean
+distclean : clean
 	rm -rf $(EXEC)
