--- a/i3status.conf
+++ b/i3status.conf
@@ -6,6 +6,7 @@ general {
 
 #order += "ipv6"
 order += "cpu_usage"
+order += "cpu_temperature 0"
 #order += "disk /home"
 #order += "run_watch DHCP"
 #order += "run_watch VPN"
@@ -58,6 +59,9 @@ load {
 
 cpu_usage {
         format = "CPU: %usage"
+}
+cpu_temperature 0 {
+    format = "T: %degrees °C"
 }
 
 
