--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,12 @@
 [submodule "vim/bundle/todo.txt-vim"]
 	path = vim/bundle/todo.txt-vim
 	url = https://github.com/dbeniamine/todo.txt-vim.git
+[submodule "vim/bundle/CheckAttach"]
+	path = vim/bundle/CheckAttach
+	url = https://github.com/chrisbra/CheckAttach.git
+[submodule "vim/bundle/vim-easygrep"]
+	path = vim/bundle/vim-easygrep
+	url = https://github.com/dkprice/vim-easygrep.git
+[submodule "vim/bundle/vim-pathogen"]
+	path = vim/bundle/vim-pathogen
+	url = https://github.com/tpope/vim-pathogen.git
