--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,9 @@
 [submodule "vim/bundle/vim-pathogen"]
 	path = vim/bundle/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule "vim/bundle/vim-mail"]
+	path = vim/bundle/vim-mail
+	url = git@github.com:dbeniamine/vim-mail.git
+[submodule "vim/bundle/vim-compile"]
+	path = vim/bundle/vim-compile
+	url = git@github.com:dbeniamine/vim-compile.git
