[i3] i3block config updated

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -67,16 +67,39 @@ interval=30
 label=Wlan
 instance=wlan0
 #instance=wlp3s0
-command=/usr/share/i3blocks/network
+command=/usr/share/i3blocks/iface
 color=#00FF00
 interval=10
 separator=false
+
+[wireless-level]
+label=
+instance=wlan0
+command=/usr/share/i3blocks/wifi
+color=#00FF00
+interval=10
+separator=false
+
+[wireless-bw]
+label=
+instance=wlan0
+command=export BLOCK_INSTANCE=wlan0;[ -z "$(/usr/share/i3blocks/iface | grep down)" ] && /usr/share/i3blocks/bandwidth
+color=#00FF00
+interval=10
 
 [ethernet]
 label=Eth
 instance=eth0
 #instance=enp0s25
-command=/usr/share/i3blocks/network
+command=/usr/share/i3blocks/iface
+color=#00FF00
+interval=10
+separator=false
+
+[eth-bw]
+label=
+instance=eth0
+command=export BLOCK_INSTANCE=eth0;[ -z "$(/usr/share/i3blocks/iface | grep down)" ] && /usr/share/i3blocks/bandwidth
 color=#00FF00
 interval=10
 
