--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -83,7 +83,7 @@ separator=false
 [wireless-bw]
 label=
 instance=wlan0
-command=export BLOCK_INSTANCE=wlan0;[ -z "$(/usr/share/i3blocks/iface | grep down)" ] && /usr/share/i3blocks/bandwidth
+command=export BLOCK_INSTANCE=wlan0;[ -z "$(/usr/share/i3blocks/iface | grep down)" ] && /usr/share/i3blocks/bandwidth | sed -e 's/IN /↓/' -e 's/OUT /↑/'
 color=#00FF00
 interval=10
 
@@ -99,7 +99,7 @@ separator=false
 [eth-bw]
 label=
 instance=eth0
-command=export BLOCK_INSTANCE=eth0;[ -z "$(/usr/share/i3blocks/iface | grep down)" ] && /usr/share/i3blocks/bandwidth
+command=export BLOCK_INSTANCE=eth0;[ -z "$(/usr/share/i3blocks/iface | grep down)" ] && /usr/share/i3blocks/bandwidth | sed -e 's/IN /↓/' -e 's/OUT /↑/'
 color=#00FF00
 interval=10
 
