--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -67,7 +67,7 @@ interval=30
 label=Wlan
 instance=wlan0
 #instance=wlp3s0
-command=/usr/share/i3blocks/iface
+command=[ -e "/usr/share/i3blocks/iface" ] && /usr/share/i3blocks/iface ||/usr/share/i3blocks/network
 color=#00FF00
 interval=10
 separator=false
@@ -91,7 +91,7 @@ interval=10
 label=Eth
 instance=eth0
 #instance=enp0s25
-command=/usr/share/i3blocks/iface
+command=[ -e "/usr/share/i3blocks/iface" ] && /usr/share/i3blocks/iface ||/usr/share/i3blocks/network
 color=#00FF00
 interval=10
 separator=false
