--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "home/david/Documents/Conf/pub/vim/bundle/vim-templates"]
 	path = home/david/Documents/Conf/pub/vim/bundle/vim-templates
 	url = https://github.com/dbeniamine/vim-templates
+[submodule "vim/bundle/vim-templates"]
+	path = vim/bundle/vim-templates
+	url = https://github.com/dbeniamine/vim-templates
