more standard tmux configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,9 +14,9 @@
 #  0. You just DO WHAT THE FUCK YOU WANT TO.
 
 #Prefix is Ctrl-a
-set -g prefix C-a
-bind C-a send-prefix
-unbind C-b
+#set -g prefix C-a
+#bind C-a send-prefix
+#unbind C-b
 
 set -sg escape-time 1
 set -g base-index 1
@@ -45,10 +45,10 @@ bind -t vi-copy 'Bspace' halfpage-up
 
 
 # easy-to-remember split pane commands
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
+#bind | split-window -h
+#bind - split-window -v
+#unbind '"'
+#unbind %
 
 # moving between panes with vim movement keys
 bind h select-pane -L
